프로필 수정, 로그아웃, 회원탈퇴 구현