@@ -6,11 +6,12 @@ import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 @Entity
 @Getter
@@ -44,9 +45,17 @@ public class User implements UserDetails {
   @Column(name = "updated_at")
   private LocalDateTime updatedAt;
 
+  public void updateNickname(String newNickname) {
+    this.nickname = newNickname;
+  }
+
+  public void updateProfileUrl(String newProfileUrl) {
+    this.profileImageUrl = newProfileUrl;
+  }
+
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return List.of();
+    return Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
   }
 
   @Override
